# OpenPrintKit

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  local-preview.sh  mkdocs.yml  plan.md  pyproject.toml  sitemap.xml  spec.md  spec.md~  structure.txt  tasks.txt  vars-templates.example.json
.codex/: config.toml  history.jsonl  version.json
.run/: OPK_Bundle.run.xml  OPK_GUI.run.xml
.specify/: plan.md  plan.md~  spec.md
OpenPrintKit_Creator_Intro/: index.html
OpenPrintKit_Manufacturer_Intro/: index.html
cli-reference/: index.html
cli-reference.de/: index.html
cli-reference.es/: index.html
cli-reference.fr/: index.html
cli-reference.pt/: index.html
docs/: OpenPrintKit_Creator_Intro.md  OpenPrintKit_Manufacturer_Intro.md  cli-reference.de.md  cli-reference.es.md  cli-reference.fr.md  cli-reference.md  cli-reference.pt.md  exact-generator-keys.md  firmware-mapping.de.md  firmware-mapping.fr.md  firmware-mapping.md  firmware-mapping.pt.md  gcode-help.de.md  gcode-help.fr.md  gcode-help.md  gcode-help.pt.md  generator-mappings.md  implementation-status.md  index.md  mcode-reference.de.md  mcode-reference.fr.md  mcode-reference.md  mcode-reference.pt.md  overview.de.md  overview.es.md  overview.fr.md  overview.md  overview.pt.md  packaging.md  pdl-schema-reference.md  project-spec.md  project-status.md  publishing.md  quickstart.md  release-checklist.md  slicer-support.md  system_notes.md  tasks.txt  tasks.txt~  translations.md  (+5 more)
exact-generator-keys/: index.html
firmware-mapping/: index.html
firmware-mapping.de/: index.html
firmware-mapping.fr/: index.html
firmware-mapping.pt/: index.html
gcode-help/: index.html
gcode-help.de/: index.html
gcode-help.fr/: index.html
gcode-help.pt/: index.html
generator-mappings/: index.html
implementation-status/: index.html
mcode-reference/: index.html
mcode-reference.de/: index.html
mcode-reference.fr/: index.html
mcode-reference.pt/: index.html
overview/: index.html
overview.de/: index.html
overview.es/: index.html
overview.fr/: index.html
overview.pt/: index.html
packaging/: index.html
pdl-schema-reference/: index.html
pdl-spec/: README.md  mkdocs.yml  requirements.txt
project-spec/: index.html
project-status/: index.html
publishing/: index.html
quickstart/: index.html
release-checklist/: index.html
schemas/: bundle.schema.json  filament.schema.json  pdl.schema.json  printer.schema.json  process.schema.json
scripts/: extract_generator_keys.py
search/: search_index.json
slicer-support/: index.html
system_notes/: index.html
tests/: test_bundle_roundtrip.py  test_cli.py  test_cli_gen_acc_overrides.py  test_cli_spool.py  test_convert_cura.py  test_convert_ideamaker.py  test_convert_prusa.py  test_convert_superslicer.py  test_gcode_expr.py  test_gcode_firmware.py  test_gcode_utils.py  test_gen_bambu.py  test_gen_bambu_fill_density.py  test_gen_bambu_process.py  test_gen_bambu_support.py  test_gen_cura.py  test_gen_cura_limits.py  test_gen_cura_process.py  (+31 more)
(+89 files in other folders)
