[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openprintkit"
version = "0.1.0"
description = "OpenPrintKit (OPK) — Open-source printer profile toolkit (PDL → slicers)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Your Name"}]
dependencies = [
  "jsonschema>=4.21.1",
  "PySide6>=6.7.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.1"
]

[project.scripts]
opk = "opk.cli.__main__:main"

[tool.black]
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["opk*"]
exclude = ["schemas*", "tests*", "examples*", "dist*"]
