[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openprintkit"
version = "0.1.0"
description = "OpenPrintKit (OPK) — Open-source printer profile toolkit (PDL → slicers)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Your Name"}]
dependencies = [
  "jsonschema>=4.21.1",
  "pyyaml>=6.0.1",
  "rich>=13.7.1"
]

[project.scripts]
opk = "opk.cli.__main__:main"
opk-gui = "opk.ui.main_window:main"

[tool.black]
line-length = 100

[tool.setuptools.packages.find]
where = ["."]
include = ["opk*"]
exclude = ["schemas*", "tests*", "examples*", "dist*"]

[project.optional-dependencies]
# GUI features (OPK Studio)
gui = [
  "PySide6>=6.7.0",
]
# NFC features (OpenPrintTag NFC read/write)
nfc = [
  "nfcpy>=1.0.4",
]
# Docs site (MkDocs)
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]
# Convenience bundle for common extras
full = [
  "PySide6>=6.7.0",
  "nfcpy>=1.0.4",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]
